--- a/package.json
+++ b/package.json
@@ -15,34 +15,45 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^8.56.0",
-		"@typescript-eslint/eslint-plugin": "^7.0.0",
-		"@typescript-eslint/parser": "^7.0.0",
-		"autoprefixer": "^10.4.18",
-		"drizzle-kit": "^0.20.14",
-		"eslint": "^8.56.0",
+		"@playwright/test": "^1.43.1",
+		"@sveltejs/adapter-auto": "^3.2.0",
+		"@sveltejs/kit": "^2.5.7",
+		"@sveltejs/vite-plugin-svelte": "^3.1.0",
+		"@types/d3-color": "^3.1.3",
+		"@types/eslint": "^8.56.10",
+		"@typescript-eslint/eslint-plugin": "^7.7.1",
+		"@typescript-eslint/parser": "^7.7.1",
+		"autoprefixer": "^10.4.19",
+		"drizzle-kit": "^0.20.17",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"postcss": "^8.4.35",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.1",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
+		"eslint-plugin-svelte": "^2.38.0",
+		"postcss": "^8.4.38",
+		"prettier": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.3",
+		"svelte": "^4.2.15",
+		"svelte-check": "^3.7.0",
+		"tailwindcss": "^3.4.3",
+		"tslib": "^2.6.2",
+		"typescript": "^5.4.5",
+		"vite": "^5.2.10",
+		"vitest": "^1.5.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@libsql/client": "^0.5.6",
+		"@types/geojson": "^7946.0.14",
+		"bits-ui": "^0.21.5",
+		"clsx": "^2.1.1",
+		"d3-color": "^3.1.0",
 		"dotenv": "^16.4.5",
-		"drizzle-orm": "^0.30.2",
-		"svelte-maplibre": "^0.8.2"
+		"drizzle-orm": "^0.30.9",
+		"geojson": "^0.5.0",
+		"lucide-svelte": "^0.377.0",
+		"openai": "^4.38.5",
+		"svelte-maplibre": "^0.8.5",
+		"tailwind-merge": "^2.3.0",
+		"tailwind-variants": "^0.2.1",
+		"zod": "^3.23.5"
 	}
 }
